--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,15 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="google-signin-client_id" content="291137676127-svvuuca518djs47q2v78se9q6iggi4nq.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js"></script>
+    <link href="./assets/css/main.css" rel="stylesheet">
     <!-- Bootstrap Core CSS -->
     <link href="./assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+ -->
 
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -26,7 +33,7 @@
 Marcado de Open Graph FACEBOOK
 ======================================-->
 
-    <meta property="og:title" content="Ursi Galletti Orfebre">
+    <meta property="og:title" content="">
     <meta property="og:url" content="">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
@@ -80,8 +87,12 @@ Marcado de Open Graph FACEBOOK
     <script src="https://www.paypal.com/sdk/js?client-id=AQhKPBY5mgg0JustLJCcf6ncmd9RghCiNhXT_b6rNUakyQtnEn8MzCn_dkHAyt5n7_P0Omo5M05to5j0"></script>
 
     <script type="text/javascript">
+        $('.dropdown-toggle').dropdown()
+    </script>
+
+    <script type="text/javascript">
         $(document).ready(function() {
-            $('#mycarr').each(function() {
+            $('#carouselExampleIndicators').each(function() {
                 $(this).carousel({
                     pause: false,
                     interval: 9000
@@ -89,7 +100,6 @@ Marcado de Open Graph FACEBOOK
             });
 
         });
-        $('.dropdown-toggle').dropdown()
     </script>
 </body>
 
